Fix sticky foter overlapping and make nav fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@ https://github.com/Code-Institute-Solutions/Django3blog */
 
 body {
     background-color: #F9FAFC;
+    padding-bottom: 12%;
 }
 
 .brand {
